--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a test</h1>
+    <h1>This is a to remove something</h1>
+    <h2>Another heading</h2>
 </body>
 </html>
